# Freebie

./: .gitignore  Cargo.toml  README.md  build.sh  com.github.rotlug.Freebie.json  default.nix  flake.nix  gen_popular.rs.txt  land.lugasi.freebie.desktop  meson.build  popular.json  pyrightconfig.json  python3-modules.json
data/: com.github.rotlug.Freebie.desktop.in  com.github.rotlug.Freebie.gschema.xml  com.github.rotlug.Freebie.metainfo.xml.in  freebie.gresource.xml  meson.build
data/gtk/: add_game_dialog.blp  browse_view.blp  game.blp  game_page.blp  help-overlay.blp  igdb_page.blp  main_page.blp  main_view.blp  play_view.blp  preferences.blp  proton_page.blp  window.blp
data/icons/: meson.build
po/: POTFILES  meson.build
src/: app.rs  args.rs  error.rs  freebie.gresource.xml  freebie.in  game.rs  game_box.py  game_manager.py  igdb.rs  main.py  main.rs  meson.build  preferences.rs  settings.rs  ui.rs  util.rs  window.py  window.ui
src/backend/: ensure.py  first_startup.py  game.py  igdb_api.py  json_utils.py  provider.py  utils.py
src/backend/fitgirl/: installer.py  provider.py
src/freebie/: game_box.py  game_manager.py  main.py  meson.build  window.py
src/freebie/backend/: ensure.py  game.py  igdb_api.py  json_utils.py  provider.py  utils.py
src/freebie/backend/fitgirl/: installer.py  provider.py
src/freebie/dialogs/: add_game.py  preferences.py
src/freebie/pages/: browse_view.py  game_page.py  igdb_page.py  main_page.py  play_view.py  proton_page.py
src/freebie/util/: desktop_shortcuts.py  game_manager.py  notifications.py
src/freebie/widgets/: game_box.py
src/pages/: browse_view.py  game_page.py  game_view.py  igdb_page.py  main_page.py  main_view.py  play_view.py  proton_page.py
src/ui/: action_button.rs  add_game_dialog.rs  browse_view.rs  game_button.rs  game_page.rs  main_page.rs  play_view.rs  preferences_dialog.rs  welcome_page.rs
src/util/: slug.rs
